--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "latest_ai_development"
 version = "0.1.0"
-description = "latest-ai-development using crewAI"
+description = "agentic researcher using crewAI"
 authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.13"
 dependencies = [
