--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,7 @@ stages:
     - script: ls -R $(Pipeline.Workspace)
       displayName: 'List Downloaded Artifacts'
 
-    - script: unzip -l $(Pipeline.Workspace)/drop/app.zip
+    - script: unzip -l $(Pipeline.Workspace)/app.zip
       displayName: 'List Contents of Downloaded ZIP File'
 
     - task: AzureRmWebAppDeployment@4
@@ -65,6 +65,6 @@ stages:
         azureSubscription: 'Default Subscription(0f21e802-aeff-4e83-977e-a5bde15f65c1)'
         appType: 'webAppLinux'
         WebAppName: 'agentic-paulch'
-        packageForLinux: '$(Pipeline.Workspace)/drop/app.zip'
-        RuntimeStack: 'PYTHON|3.10'
+        packageForLinux: '$(Pipeline.Workspace)/app.zip'
+        RuntimeStack: 'PYTHON|3.11'
         StartupCommand: 'source /antenv/bin/activate && cd src/latest_ai_development && panel serve main.py --port $PORT --allow-websocket-origin=* --address=0.0.0.0'
