--- a/requirements.txt
+++ b/requirements.txt
@@ -255,6 +255,7 @@ pyright==1.1.393
 pysbd==0.3.4
 pytest==7.4.0
 pytest-asyncio==0.23.2
+python==3.10.15
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 pytube==15.0.0
