--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,4 +67,4 @@ stages:
         WebAppName: 'agentic-paulch'
         packageForLinux: '$(Pipeline.Workspace)/app.zip'
         RuntimeStack: 'PYTHON|3.11'
-        StartupCommand: '. /antenv/bin/activate && cd src/latest_ai_development && panel serve main.py --port $PORT --allow-websocket-origin=* --address=0.0.0.0'
+        StartupCommand: 'cd src/latest_ai_development && panel serve main.py --port 5006'
