--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,3 +68,10 @@ stages:
         packageForLinux: '$(Pipeline.Workspace)/app.zip'
         RuntimeStack: 'PYTHON|3.11'
         StartupCommand: 'cd src/latest_ai_development && panel serve main.py --port 5006'
+    
+    - task: PublishCodeCoverageResults@1
+      inputs:
+        codeCoverageTool: "JaCoCo"
+        summaryFileLocation: "$(System.DefaultWorkingDirectory)/**/site/jacoco/jacoco.xml"
+        reportDirectory: "$(System.DefaultWorkingDirectory)/**/site/jacoco"
+        failIfCoverageEmpty: true
