--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ stages:
         python --version
         pip install -r requirements.txt
         pip install -e .
+        crewai install
       displayName: 'Install Dependencies'
 
     - script: ls -R .
