--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ stages:
     - script: |
         python --version
         pip install -r requirements.txt
+        crewai install
         pip install -e .
       displayName: 'Install Dependencies'
 
