--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,6 +69,6 @@ stages:
         appType: 'webAppLinux'
         WebAppName: 'agentic-paulch'
         packageForLinux: '$(Pipeline.Workspace)/app.zip'
-        RuntimeStack: 'PYTHON|3.11'
-        StartupCommand: 'cd src/latest_ai_development && panel serve main.py --port 5006 --allow-websocket-origin=* --address=0.0.0.0'
+        RuntimeStack: 'PYTHON|3.10'
+        StartupCommand: '. /antenv/bin/activate && cd src/latest_ai_development && panel serve main.py --port 5006 --allow-websocket-origin=* --address=0.0.0.0'
 
