--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,9 +15,6 @@ stages:
       displayName: 'Start Build Process'
 
     - script: |
-        python --version
-        python -m venv antenv
-        source antenv/bin/activate
         pip install --upgrade pip
         pip install -r requirements.txt
         crewai install
@@ -28,7 +25,7 @@ stages:
 
     - script: |
         echo Creating deployment package...
-        zip -r $(Build.ArtifactStagingDirectory)/app.zip src/ requirements.txt antenv/
+        zip -r $(Build.ArtifactStagingDirectory)/app.zip src/ requirements.txt
       displayName: 'Package Application'
 
     - script: unzip -l $(Build.ArtifactStagingDirectory)/app.zip
