Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,9 +15,9 @@ stages:
       displayName: 'Start Build Process'
 
     - script: |
-        pip install --upgrade pip
         pip install -r requirements.txt
         crewai install
+        pip install -e .
       displayName: 'Install Dependencies'
 
     - script: ls -R .
@@ -66,6 +66,6 @@ stages:
         appType: 'webAppLinux'
         WebAppName: 'agentic-paulch'
         packageForLinux: '$(Pipeline.Workspace)/app.zip'
-        RuntimeStack: 'PYTHON|3.10'
+        RuntimeStack: 'PYTHON|3.11'
         StartupCommand: 'cd src/latest_ai_development && panel serve main.py --port 5006 --allow-websocket-origin=* --address=0.0.0.0'
 
