--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 auth0-python==4.8.0
 azure-common==1.1.28
 azure-core==1.32.0
@@ -18,3 +17,4 @@ onnxruntime==1.20.1
 openai==1.55.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
+panel==1.6.0
