--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,8 @@ stages:
       displayName: 'Start Build Process'
 
     - script: |
+        python -m venv antenv
+        source antenv/bin/activate
         pip install --upgrade pip
         pip install -r requirements.txt
         crewai install
@@ -25,7 +27,7 @@ stages:
 
     - script: |
         echo Creating deployment package...
-        zip -r $(Build.ArtifactStagingDirectory)/app.zip src/ requirements.txt
+        zip -r $(Build.ArtifactStagingDirectory)/app.zip src/ requirements.txt antenv/
       displayName: 'Package Application'
 
     - script: unzip -l $(Build.ArtifactStagingDirectory)/app.zip
