--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,8 +15,6 @@ stages:
       displayName: 'Start Build Process'
 
     - script: |
-        python -m venv antenv
-        source antenv/bin/activate
         pip install --upgrade pip
         pip install -r requirements.txt
         crewai install
@@ -27,7 +25,7 @@ stages:
 
     - script: |
         echo Creating deployment package...
-        zip -r $(Build.ArtifactStagingDirectory)/app.zip src/ requirements.txt antenv/
+        zip -r $(Build.ArtifactStagingDirectory)/app.zip src/ requirements.txt
       displayName: 'Package Application'
 
     - script: unzip -l $(Build.ArtifactStagingDirectory)/app.zip
@@ -70,12 +68,4 @@ stages:
         runtimeStack: 'PYTHON|3.10'
         startUpCommand: 'cd src/latest_ai_development && panel serve main.py'
     
-    - task: AzureRmWebAppDeployment@4
-      inputs:
-        ConnectionType: 'AzureRM'
-        azureSubscription: 'Default Subscription(0f21e802-aeff-4e83-977e-a5bde15f65c1)'
-        appType: 'webAppLinux'
-        WebAppName: 'agent'
-        packageForLinux: '$(Pipeline.Workspace)/app.zip'
-        RuntimeStack: 'PYTHON|3.10'
-        StartupCommand: 'cd src/latest_ai_development && panel serve main.py'
+
