--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,6 +65,6 @@ stages:
         appName: 'agentp2'
         package: '$(Pipeline.Workspace)/app.zip'
         runtimeStack: 'PYTHON|3.10'
-        startUpCommand: 'cd src/latest_ai_development && panel serve main.py'
+        startUpCommand: 'cd src/latest_ai_development && panel serve main.py --port 8000 --allow-websocket-origin=*'
     
 
