--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,8 @@ stages:
       displayName: 'Start Build Process'
 
     - script: |
+        python3 -m venv .venv
+        source .venv/bin/activate
         pip install -r requirements.txt
         crewai install
       displayName: 'Install Dependencies'
@@ -24,7 +26,7 @@ stages:
 
     - script: |
         echo Creating deployment package...
-        zip -r $(Build.ArtifactStagingDirectory)/app.zip src/ requirements.txt
+        zip -r $(Build.ArtifactStagingDirectory)/app.zip src/ requirements.txt .venv/
       displayName: 'Package Application'
 
     - script: unzip -l $(Build.ArtifactStagingDirectory)/app.zip
