--- a/requirements.txt
+++ b/requirements.txt
@@ -1,330 +1,4 @@
-aiofiles==24.1.0
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.12
-aiosignal==1.3.1
-alembic==1.14.1
-altair==5.5.0
-annotated-types==0.7.0
-anyio==3.7.1
-appdirs==1.4.4
-asgiref==3.8.1
-asttokens==3.0.0
-async-timeout==4.0.3
-attrs==24.2.0
-auth0-python==4.8.0
-azure-ai-documentintelligence==1.0.0b2
-azure-ai-formrecognizer==3.3.3
-azure-common==1.1.28
-azure-core==1.32.0
-azure-cosmos==4.5.0
-azure-identity==1.15.0
-azure-keyvault-secrets==4.9.0
-azure-mgmt-core==1.5.0
-azure-search-documents==11.4.0b6
-azure-storage-blob==12.17.0
-azure-storage-file-share==12.20.0
-azureml-mlflow==1.57.0
-backoff==2.2.1
-backports.tarfile==1.2.0
-bcrypt==4.2.1
-beautifulsoup4==4.12.3
-bleach==6.2.0
-blinker==1.9.0
-bokeh==3.6.2
-bs4==0.0.1
-build==1.2.2.post1
-cachetools==5.5.0
-certifi==2024.8.30
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.0
-chroma-hnswlib==0.7.6
-chromadb==0.5.23
-click==8.1.8
-cloudevents==1.11.0
-cloudpickle==3.1.0
-cohere==5.13.11
-colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.2.2
-contourpy==1.3.1
-coverage==7.6.10
-crewai==0.100.1
-crewai-tools==0.33.0
-cryptography==44.0.0
-databricks-sdk==0.38.0
-dataclasses-json==0.6.7
-debugpy==1.8.9
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.15
-deprecation==2.1.0
-diskcache==5.6.3
-distlib==0.3.9
-distro==1.9.0
-dnspython==2.7.0
-docker==7.1.0
-docstring_parser==0.16
-durationpy==0.9
-email_validator==2.2.0
-embedchain==0.1.126
-et_xmlfile==2.0.0
-exceptiongroup==1.2.2
-executing==2.1.0
-fastapi==0.115.8
-fastavro==1.10.0
-filelock==3.17.0
-FLAML==2.3.3
-Flask==3.0.3
-Flask-Cors==5.0.0
-flatbuffers==25.1.24
-frozendict==2.4.6
-frozenlist==1.5.0
-fsspec==2025.2.0
-gitdb==4.0.11
-GitPython==3.1.41
-google-api-core==2.23.0
-google-auth==2.36.0
-google-cloud-aiplatform==1.79.0
-google-cloud-bigquery==3.29.0
-google-cloud-core==2.4.1
-google-cloud-resource-manager==1.14.0
-google-cloud-storage==2.19.0
-google-crc32c==1.6.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.66.0
-gptcache==0.1.44
-greenlet==3.1.1
-grpc-google-iam-v1==0.14.0
-grpcio==1.70.0
-grpcio-status==1.70.0
-grpcio-tools==1.70.0
-gunicorn==20.1.0
-h11==0.14.0
-h2==4.1.0
-hpack==4.1.0
-html5lib==1.1
-httpcore==1.0.7
-httptools==0.6.4
-httpx==0.27.2
-httpx-sse==0.4.0
-huggingface-hub==0.28.1
-humanfriendly==10.0
-Hypercorn==0.17.3
-hyperframe==6.1.0
-idna==3.10
-importlib_metadata==8.5.0
-importlib_resources==6.5.2
-inference-schema==1.8
-iniconfig==2.0.0
-instructor==1.7.2
-ipykernel==6.29.5
-ipython==8.30.0
-isodate==0.7.2
-itsdangerous==2.2.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-jedi==0.19.2
-jeepney==0.8.0
-Jinja2==3.1.4
-jiter==0.8.0
-json5==0.10.0
-json_repair==0.35.0
-jsonpatch==1.33
-jsonpickle==4.0.0
-jsonpointer==3.0.0
-jsonref==1.1.0
-jsonschema==4.23.0
-jsonschema-path==0.3.3
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-keyring==25.5.0
-keyrings.alt==5.0.2
-kubernetes==32.0.0
-lancedb==0.18.0
-langchain==0.3.17
-langchain-cohere==0.3.5
-langchain-community==0.3.16
-langchain-core==0.3.33
-langchain-experimental==0.3.4
-langchain-openai==0.2.11
-langchain-text-splitters==0.3.5
-langsmith==0.1.147
-lazy-object-proxy==1.10.0
-linkify-it-py==2.0.3
-litellm==1.59.8
-lxml==5.3.0
-Mako==1.3.8
-Markdown==3.4.4
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.23.1
-matplotlib-inline==0.1.7
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-mem0ai==0.1.48
-mlflow-skinny==2.18.0
-mmh3==5.1.0
-monotonic==1.6
-more-itertools==10.5.0
-mpmath==1.3.0
-msal==1.31.1
-msal-extensions==1.2.0
-msrest==0.7.1
-multidict==6.1.0
-multitasking==0.0.11
-mypy-extensions==1.0.0
-narwhals==1.24.2
-nest-asyncio==1.6.0
-networkx==3.4.2
-nodeenv==1.9.1
-numpy==1.26.4
-oauthlib==3.2.2
-onnxruntime==1.20.1
-openai==1.55.3
-openapi-core==0.19.4
-openapi-schema-validator==0.6.2
-openapi-spec-validator==0.7.1
-opencensus==0.11.4
-opencensus-context==0.1.3
-opencensus-ext-azure==1.1.13
-opencensus-ext-logging==0.1.1
-openpyxl==3.1.5
-opentelemetry-api==1.29.0
-opentelemetry-exporter-otlp-proto-common==1.29.0
-opentelemetry-exporter-otlp-proto-grpc==1.29.0
-opentelemetry-exporter-otlp-proto-http==1.29.0
-opentelemetry-instrumentation==0.50b0
-opentelemetry-instrumentation-asgi==0.50b0
-opentelemetry-instrumentation-fastapi==0.50b0
-opentelemetry-proto==1.29.0
-opentelemetry-sdk==1.29.0
-opentelemetry-semantic-conventions==0.50b0
-opentelemetry-util-http==0.50b0
-orjson==3.10.12
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-panel==1.6.0
-param==2.2.0
-parse==1.20.2
-parso==0.8.4
-pathable==0.4.3
-pdfminer.six==20231228
-pdfplumber==0.11.5
-peewee==3.17.8
-pexpect==4.9.0
-pillow==11.1.0
-platformdirs==4.3.6
-pluggy==1.5.0
-portalocker==2.10.1
-posthog==3.11.0
-prance==23.6.21.0
-priority==2.0.0
-prompt_toolkit==3.0.48
-propcache==0.2.1
-proto-plus==1.25.0
-protobuf==5.29.1
-psutil==6.1.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyarrow==19.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pyautogen==0.2.27
-pybars4==0.9.13
-pycparser==2.22
-pydantic==2.9.2
-pydantic-settings==2.7.1
-pydantic_core==2.23.4
-pydash==8.0.4
-pydeck==0.9.1
-Pygments==2.18.0
-PyJWT==2.10.1
-pylance==0.22.0
-PyMeta3==0.5.1
-PyMuPDF==1.24.5
-PyMuPDFb==1.24.3
-pypdf==5.2.0
-pypdfium2==4.30.1
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-pyright==1.1.393
-pysbd==0.3.4
-pytest==7.4.0
-pytest-asyncio==0.23.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-pytube==15.0.0
-pytz==2024.2
-pyvis==0.3.2
-pyviz_comms==3.0.4
-PyYAML==6.0.2
-pyzmq==26.2.0
-qdrant-client==1.13.2
-Quart==0.19.9
-referencing==0.35.1
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rich==13.9.4
-rpds-py==0.22.3
-rsa==4.9
-ruamel.yaml==0.18.6
-ruamel.yaml.clib==0.2.12
-schema==0.7.7
-SecretStorage==3.3.3
-semantic-kernel==1.16.0
-shapely==2.0.7
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.6
-SQLAlchemy==2.0.36
-sqlparse==0.5.2
-stack-data==0.6.3
-starlette==0.45.3
-streamlit==1.41.1
-strictyaml==1.7.3
-sympy==1.13.3
-tabulate==0.9.0
-taskgroup==0.2.2
-tenacity==9.0.0
-termcolor==2.5.0
-tiktoken==0.7.0
-tokenizers==0.20.3
-toml==0.10.2
-tomli==2.2.1
-tomli_w==1.2.0
-tornado==6.4.2
-tqdm==4.66.1
-traitlets==5.14.3
-typer==0.15.1
-types-requests==2.32.0.20241016
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2025.1
-uc-micro-py==1.0.3
-urllib3==2.3.0
-uv==0.5.26
-uvicorn==0.24.0
-uvloop==0.21.0
-virtualenv==20.29.1
-watchdog==6.0.0
-watchfiles==1.0.4
-wcwidth==0.2.13
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==14.2
-Werkzeug==3.1.3
-wrapt==1.16.0
-wsproto==1.2.0
-xyzservices==2025.1.0
-yarl==1.18.3
-yfinance==0.2.52
-zipp==3.21.0
+crewai
+crewai-tools
+pysqlite3-binary
+panel
