--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ crewai
 crewai-tools
 pysqlite3-binary # for sqlite3 database during actual deployment
 panel
+gunicorn
 #python-dotenv # for loading environment variables from .env file when running locally
